# UtilityCollector

./: .env.example  .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  REACT_MIGRATION_PLAN.md  TECHNICAL_PLAN.md  alembic.ini  artifact-registry-cleanup-policy.json  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml  storage-lifecycle.json  storage.rules  utility_bill.json
.github/workflows/: deploy-scraper.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
app/: main.py
app/commands/: reprocess_bills.py  sync_bills.py
app/core/: logging_config.py
app/db/: crud.py  database.py  models.py
app/db/migrations/: env.py
app/jobs/: pull_bills_job.py
app/services/: bill_manager.py  invoice_service.py
app/web/routers/: bills.py  units.py
app/web/templates/: base.html  bill_detail.html  bills.html  edit_unit.html  units.html
functions/: package-lock.json  package.json
functions/lib/: index.js  index.js.map
functions/scripts/: cleanup-has-adjustments.ts  validate-bills.ts
functions/src/: index.ts
scraper/: Dockerfile  browser.py  main.py  package-lock.json  parser.py  pyproject.toml
scraper/scrapers/: __init__.py  nextcentury_meters.py  seattle_utilities.py
src/: main.py
src/commands/: clear_and_sync.py  parse_bill.py  sync_bills.py
src/core/: config.py  logging_config.py
src/db/: crud.py  database.py
src/db/migrations/: env.py
src/jobs/: pull_bills_job.py
src/services/: bill_manager.py  invoice_service.py
src/web/: templating.py
src/web/routers/: bills.py  units.py
web/: .env.example  index.html  package-lock.json  package.json
web/src/: App.tsx  firebase.ts
web/src/components/: Layout.tsx  StatusBadge.tsx
web/src/hooks/: useAuth.ts  useBills.ts  useUnits.ts  useUsers.ts
web/src/pages/: BillDetail.tsx  Bills.tsx  Dashboard.tsx  Login.tsx  Settings.tsx  Units.tsx  (+1 more)
(+5 files in other folders)
