[project]
name = "utilitycollector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "alembic",
    "apscheduler",
    "tzlocal",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "pypdf2",
    "python-dotenv",
    "pydantic",
    "pydantic-core",
    "pydantic-settings",
    "starlette",
    "playwright",
    "click",
    "h11",
    "jinja2",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["data*", "bills*"]
